# leveldb-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/leveldb/: __init__.py  __init__.pyi
src/: lib.rs
