[package]
name = "leveldb-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "leveldb"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "leveldb"

[dependencies]
leveldb-sys = "2.0.9"
leveldb = "0.8.6"
pyo3 = "0.23.2"
db-key = "0.0.5"